--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,10 +4,7 @@ volumes:
   psysh-store:
 services:
   app:
-    build:
-      context: .
-      dockerfile: ./infra/docker/php/Dockerfile
-      target: ${APP_BUILD_TARGET:-development}
+    image: doma2mo10/backend-app:latest
     volumes:
       - type: bind
         source: ./src
@@ -31,9 +28,7 @@ services:
       - DB_PASSWORD=${DB_PASSWORD:-secret}
 
   web:
-    build:
-      context: .
-      dockerfile: ./infra/docker/nginx/Dockerfile
+    image: doma2mo10/backend-web:latest
     ports:
       - target: 80
         published: ${WEB_PUBLISHED_PORT:-80}
@@ -45,9 +40,7 @@ services:
         target: /workspace
 
   db:
-    build:
-      context: .
-      dockerfile: ./infra/docker/mysql/Dockerfile
+    image: doma2mo10/backend-db:latest
     ports:
       - target: 3306
         published: ${DB_PUBLISHED_PORT:-3306}
