--- a/.github/workflows/laravel-testing.yml
+++ b/.github/workflows/laravel-testing.yml
@@ -10,57 +10,58 @@ env:
   SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
 
 jobs:
-  run-on: ubuntu-latest
-  timeout-minutes: 20
+  laravel-testing:
+    run-on: ubuntu-latest
+    timeout-minutes: 20
 
-  steps:
-    - name: checkout
-      uses: actions/checkout@v2
+    steps:
+      - name: checkout
+        uses: actions/checkout@v2
 
-    - name: build image
-      run: docker compose up -d
+      - name: build image
+        run: docker compose up -d
 
-    - name: composer install
-      run: docker compose exec app composer install
+      - name: composer install
+        run: docker compose exec app composer install
 
-    - name: composer version
-      run: docker compose exec app composer install
+      - name: composer version
+        run: docker compose exec app composer install
 
-    - name: php artisan version
-      run: docker compose exec app php artisan version
+      - name: php artisan version
+        run: docker compose exec app php artisan version
 
-    - name: laravel setting
-      run: docker compose exec app cp .env.example .env &&
-           docker compose exec app php artisan key:generate &&
-           docker compose exec app php artisan storage:link &&
-           docker compose exec app chmod -R 777 storage bootstrap/cache
+      - name: laravel setting
+        run: docker compose exec app cp .env.example .env &&
+            docker compose exec app php artisan key:generate &&
+            docker compose exec app php artisan storage:link &&
+            docker compose exec app chmod -R 777 storage bootstrap/cache
 
-    - name: migration test
-      run: docker compose exec app php artisan migrate:fresh --seed
+      - name: migration test
+        run: docker compose exec app php artisan migrate:fresh --seed
 
-    - name: unit-test
-      run: docker compose exec app php artisan test
+      - name: unit-test
+        run: docker compose exec app php artisan test
 
-    - name: Success
-      uses: rtCamp/action-slack-notify@v2.0.2
-      if: success()
-      env:
-        SLACK_TITLE: register docker image flow / Success
-        SLACK_COLOR: good
-        SLACK_MESSAGE: Message for Success
+      - name: Success
+        uses: rtCamp/action-slack-notify@v2.0.2
+        if: success()
+        env:
+          SLACK_TITLE: register docker image flow / Success
+          SLACK_COLOR: good
+          SLACK_MESSAGE: Message for Success
 
-    - name: Failure
-      uses: rtCamp/action-slack-notify@v2.0.2
-      if: failure()
-      env:
-        SLACK_TITLE: register docker image flow / Failure
-        SLACK_COLOR: danger
-        SLACK_MESSAGE: Message for Failure
+      - name: Failure
+        uses: rtCamp/action-slack-notify@v2.0.2
+        if: failure()
+        env:
+          SLACK_TITLE: register docker image flow / Failure
+          SLACK_COLOR: danger
+          SLACK_MESSAGE: Message for Failure
 
-    - name: Cancel
-      uses: rtCamp/action-slack-notify@v2.0.2
-      if: cancelled()
-      env:
-        SLACK_TITLE: register docker image flow / Cancel
-        SLACK_COLOR: danger
-        SLACK_MESSAGE: Message for Cancel
+      - name: Cancel
+        uses: rtCamp/action-slack-notify@v2.0.2
+        if: cancelled()
+        env:
+          SLACK_TITLE: register docker image flow / Cancel
+          SLACK_COLOR: danger
+          SLACK_MESSAGE: Message for Cancel
