--- a/.github/workflows/register-docker-image.yml
+++ b/.github/workflows/register-docker-image.yml
@@ -1,9 +1,11 @@
 name: register-docker-image
 
 on:
-  push:
-    paths:
-      - "infra/**"
+  merge:
+    branches:
+      - "features"
+        paths:
+          - "infra/**"
 
 env:
   SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_URL }}
