--- a/.github/workflows/laravel-testing.yml
+++ b/.github/workflows/laravel-testing.yml
@@ -1,9 +1,6 @@
 name: laravel-testing
 
-on:
-  pull_request:
-    branches:
-      - "development"
+on: [push]
 
 env:
   SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_URL }}
@@ -30,8 +27,24 @@ jobs:
       - name: php artisan version
         run: docker compose exec app php artisan version
 
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ap-northeast-1
+
+      - name: Download file from S3
+        env:
+          S3_DOWNLOAD_BUCKET: ${{ secrets.S3_DOWNLOAD_BUCKET }}
+        run: |
+          aws s3 cp s3://$S3_DOWNLOAD_BUCKET/test.env ./  --quiet
+
+      - name: docker cp test.env
+        run: docker cp ./test.env app:/
+
       - name: laravel setting
-        run: docker compose exec app cp .env.example .env &&
+        run: docker compose exec app cp test.env .env &&
             docker compose exec app php artisan key:generate &&
             docker compose exec app php artisan storage:link &&
             docker compose exec app chmod -R 777 storage bootstrap/cache
