--- a/.github/workflows/laravel-testing.yml
+++ b/.github/workflows/laravel-testing.yml
@@ -19,13 +19,13 @@ jobs:
         run: docker compose up -d
 
       - name: composer install
-        run: docker compose exec app composer install
+        run: docker compose exec backend-app composer install
 
       - name: composer version
-        run: docker compose exec app composer install
+        run: docker compose exec backend-app composer -v
 
       - name: php artisan version
-        run: docker compose exec app php artisan version
+        run: docker compose exec backend-app php artisan version
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
@@ -41,25 +41,25 @@ jobs:
           aws s3 cp s3://$S3_DOWNLOAD_BUCKET/test.env ./  --quiet
 
       - name: docker cp test.env
-        run: docker cp ./test.env app:/
+        run: docker cp ./test.env backend-app:/
 
       - name: laravel setting
-        run: docker compose exec app cp test.env .env &&
-            docker compose exec app php artisan key:generate &&
-            docker compose exec app php artisan storage:link &&
-            docker compose exec app chmod -R 777 storage bootstrap/cache
+        run: docker compose exec backend-app cp test.env .env &&
+            docker compose exec backend-app php artisan key:generate &&
+            docker compose exec backend-app php artisan storage:link &&
+            docker compose exec backend-app chmod -R 777 storage bootstrap/cache
 
       - name: migration test
-        run: docker compose exec app php artisan migrate:fresh --seed
+        run: docker compose exec backend-app php artisan migrate:fresh --seed
 
       - name: unit-test
-        run: docker compose exec app php artisan test
+        run: docker compose exec backend-app php artisan test
 
       - name: Success
         uses: rtCamp/action-slack-notify@v2.0.2
         if: success()
         env:
-          SLACK_TITLE: register docker image flow / Success
+          SLACK_TITLE: laravel unit test / Success
           SLACK_COLOR: good
           SLACK_MESSAGE: Message for Success
 
@@ -67,7 +67,7 @@ jobs:
         uses: rtCamp/action-slack-notify@v2.0.2
         if: failure()
         env:
-          SLACK_TITLE: register docker image flow / Failure
+          SLACK_TITLE: laravel unit test / Failure
           SLACK_COLOR: danger
           SLACK_MESSAGE: Message for Failure
 
@@ -75,6 +75,6 @@ jobs:
         uses: rtCamp/action-slack-notify@v2.0.2
         if: cancelled()
         env:
-          SLACK_TITLE: register docker image flow / Cancel
+          SLACK_TITLE: laravel unit test / Cancel
           SLACK_COLOR: danger
           SLACK_MESSAGE: Message for Cancel
