--- a/.github/workflows/laravel-testing.yml
+++ b/.github/workflows/laravel-testing.yml
@@ -1,6 +1,9 @@
 name: laravel-testing
 
-on: [push]
+on:
+  pull_request:
+    branches:
+      - "development"
 
 env:
   SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_URL }}
@@ -18,6 +21,9 @@ jobs:
       - name: build image
         run: docker compose up -d
 
+      - name: run container
+        run: docker compose run
+
       - name: docker image ps
         run: docker compose ps
 
@@ -33,14 +39,15 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
-          aws-access-key-id: AKIA2LGS6U77VMUQ23ZC
-          aws-secret-access-key: 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
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ap-northeast-1
 
       - name: Download file from S3
         env:
-          S3_DOWNLOAD_BUCKET: ma2mo10-laravel-project-environment
-        run: aws s3 cp s3://$S3_DOWNLOAD_BUCKET/test.env ./ --quiet
+          S3_DOWNLOAD_BUCKET: ${{ secrets.S3_DOWNLOAD_BUCKET }}
+        run: |
+          aws s3 cp s3://$S3_DOWNLOAD_BUCKET/test.env ./  --quiet
 
       - name: open file
         run: cat ./test.env
