--- a/.github/workflows/register-docker-image.yml
+++ b/.github/workflows/register-docker-image.yml
@@ -1,11 +1,6 @@
 name: register-docker-image
 
-on:
-  push:
-    branches:
-      - "features"
-        paths:
-          - "infra/**"
+on: [push]
 
 env:
   SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_URL }}
@@ -38,7 +33,7 @@ jobs:
           context: .
           file: ./infra/docker/php/Dockerfile
           push: true
-          platforms: linux/arm64
+          platforms: linux/arm64 linux/amd64
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/backend-app:latest
 
       - name: Build & Push nginx Container
@@ -47,7 +42,7 @@ jobs:
           context: .
           file: ./infra/docker/nginx/Dockerfile
           push: true
-          platforms: linux/arm64
+          platforms: linux/arm64 linux/amd64
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/backend-web:latest
 
       - name: Build & Push db Container
@@ -56,7 +51,7 @@ jobs:
           context: .
           file: ./infra/docker/mysql/Dockerfile
           push: true
-          platforms: linux/arm64
+          platforms: linux/arm64 linux/amd64
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/backend-db:latest
 
       - name: Success
