--- a/.github/workflows/register-docker-image.yml
+++ b/.github/workflows/register-docker-image.yml
@@ -24,8 +24,8 @@ jobs:
         uses: docker/login-action@v1
         with:
           registry: docker.io
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          username: doma2mo10
+          password: dckr_pat_A3h_qLuO-5RDL906Tcs9mOzZzhI
 
       - name: Build & Push app Container
         uses: docker/build-push-action@v2
@@ -33,8 +33,9 @@ jobs:
           context: .
           file: ./infra/docker/php/Dockerfile
           push: true
-          platforms: linux/arm64 linux/amd64
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/backend-app:latest
+          target: development
+          platforms: linux/arm64, linux/amd64
+          tags: doma2mo10/backend-app:latest
 
       - name: Build & Push nginx Container
         uses: docker/build-push-action@v2
@@ -42,8 +43,8 @@ jobs:
           context: .
           file: ./infra/docker/nginx/Dockerfile
           push: true
-          platforms: linux/arm64 linux/amd64
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/backend-web:latest
+          platforms: linux/arm64, linux/amd64
+          tags: doma2mo10/backend-web:latest
 
       - name: Build & Push db Container
         uses: docker/build-push-action@v2
@@ -51,8 +52,8 @@ jobs:
           context: .
           file: ./infra/docker/mysql/Dockerfile
           push: true
-          platforms: linux/arm64 linux/amd64
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/backend-db:latest
+          platforms: linux/arm64, linux/amd64
+          tags: doma2mo10/backend-db:latest
 
       - name: Success
         uses: rtCamp/action-slack-notify@v2.0.2
