--- a/.github/workflows/register-docker-image.yml
+++ b/.github/workflows/register-docker-image.yml
@@ -1,6 +1,9 @@
 name: register-docker-image
 
-on: [push]
+on:
+  push:
+    paths:
+      - "./infra/**"
 
 env:
   SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_URL }}
@@ -9,7 +12,7 @@ env:
 jobs:
   docker-image-register:
     runs-on: ubuntu-latest
-    timeout-minutes: 20
+    timeout-minutes: 30
 
     steps:
       - uses: actions/checkout@v2
@@ -24,8 +27,8 @@ jobs:
         uses: docker/login-action@v1
         with:
           registry: docker.io
-          username: doma2mo10
-          password: dckr_pat_A3h_qLuO-5RDL906Tcs9mOzZzhI
+          username: ${{ DOCKERHUB_USERNAME }}
+          password: ${{ DOCKERHUB_TOKEN }}
 
       - name: Build & Push app Container
         uses: docker/build-push-action@v2
@@ -34,7 +37,7 @@ jobs:
           file: ./infra/docker/php/Dockerfile
           push: true
           platforms: linux/arm64, linux/amd64
-          tags: doma2mo10/backend-app:latest
+          tags: ${{ DOCKERHUB_USERNAME }}/backend-app:latest
 
       - name: Build & Push nginx Container
         uses: docker/build-push-action@v2
@@ -43,7 +46,7 @@ jobs:
           file: ./infra/docker/nginx/Dockerfile
           push: true
           platforms: linux/arm64, linux/amd64
-          tags: doma2mo10/backend-web:latest
+          tags: ${{ DOCKERHUB_USERNAME }}/backend-web:latest
 
       - name: Build & Push db Container
         uses: docker/build-push-action@v2
@@ -52,7 +55,7 @@ jobs:
           file: ./infra/docker/mysql/Dockerfile
           push: true
           platforms: linux/arm64, linux/amd64
-          tags: doma2mo10/backend-db:latest
+          tags: ${{ DOCKERHUB_USERNAME }}/backend-db:latest
 
       - name: Success
         uses: rtCamp/action-slack-notify@v2.0.2
