--- a/.github/workflows/register-docker-image.yml
+++ b/.github/workflows/register-docker-image.yml
@@ -1,6 +1,11 @@
 name: register-docker-image
 
-on: [push]
+on:
+  push:
+    branches:
+      - "features"
+    path:
+      - "./infra/**"
 
 env:
   SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_URL }}
