--- a/.github/workflows/laravel-testing.yml
+++ b/.github/workflows/laravel-testing.yml
@@ -1,9 +1,6 @@
 name: laravel-testing
 
-on:
-  pull_request:
-    branches:
-      - "development"
+on: [push]
 
 env:
   SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_URL }}
