--- a/.github/workflows/laravel-testing.yml
+++ b/.github/workflows/laravel-testing.yml
@@ -1,6 +1,9 @@
 name: laravel-testing
 
-on: [push]
+on:
+  pull_request:
+    branches:
+      - "development"
 
 env:
   SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_URL }}
