--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,7 +8,7 @@ on:
 
 env:
   AWS_REGION: ap-northeast-1
-  ECS_CLUSTER: laravel-cluster
+  ECS_CLUSTER: laravel-project-cluster
   ECS_LARAVEL_SERVICE: laravel-service
   APP_CONTAINER_NAME: laravel-app-container
   WEB_CONTAINER_NAME: laravel-web-container
