--- a/infra/docker/php/Dockerfile
+++ b/infra/docker/php/Dockerfile
@@ -50,12 +50,6 @@ FROM base AS deploy
 RUN apt update \
     && apt install -y supervisor
 
-COPY ./infra/docker/php/laravel-worker.conf /etc/supervisor/conf.d
-COPY ./infra/docker/php/php.deploy.ini /usr/local/etc/php/php.ini
+COPY ./laravel-worker.conf /etc/supervisor/conf.d
+COPY ./php.deploy.ini /usr/local/etc/php/php.ini
 COPY ./src /workspace
-
-RUN composer install -q -n --no-ansi --no-dev --no-scripts --no-progress --prefer-dist \
-  && chmod -R 777 storage bootstrap/cache \
-  && php artisan optimize:clear \
-  && php artisan optimize
-
